<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.voiceverification.MainActivity">

    <group android:orderInCategory="101" >
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_FAQ"
            android:orderInCategory="102"
            android:title="@string/FAQ"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_Help"
            android:orderInCategory="103"
            android:title="@string/Help"
            app:showAsAction="never" />
    </group>

</menu>